--- a/style/style.css
+++ b/style/style.css
@@ -25,7 +25,8 @@
     margin: auto;
     width: 68.75%;
     display: grid;
-    grid-template-columns: 168px 336px auto;;
+    grid-template-columns: 168px 336px auto;
+    padding-bottom: 50px;
     
     
 }
@@ -97,4 +98,72 @@
 .portfile__button-big:hover{
     opacity: 0.6;
     cursor: pointer;
+}
+/* тут возможная ошибка в max-width*/
+.elements{
+    margin: auto;
+
+    max-width:880px;
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    grid-template-rows: repeat(2,1fr);
+    column-gap: 17px;
+    row-gap: 20px;
+    padding-bottom: 66px;
+    
+}
+
+.element{
+    display:flex;
+    flex-direction: column;
+    height: 361px;
+    background-color: white;
+    border-radius: 10px;
+}
+
+.element__img{
+    width: 282px;
+    border-radius: 10px 10px 0px 0px;
+}
+
+.element__group{
+    display: flex;
+    justify-content: space-between;
+    margin: 25px 15px 31px 21px;
+}
+.element__text{
+    margin: 0;
+    font-family: Inter;
+    font-style: normal;
+    font-weight: 900;
+    font-size: 24px;
+    line-height: 29px;
+    color: black
+}
+
+.element__button{
+    border: 0px;
+    background-color: white;
+}
+
+.element__button:hover{
+    opacity: 0.8;
+    cursor: pointer;
+}
+
+.footer{
+    max-width:1280px;
+    margin: auto;
+    width: 68.75%;
+    padding-bottom: 60px;
+}
+
+.footer__copyright{
+    font-family: Inter;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 22px;
+    color: #545454;
+    margin: 0;
 }
