--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -26,3 +26,12 @@
     src: url(Inter-Black.woff2) format("woff2"),
          url(Inter-Black.woff) format("woff");
   }
+
+  @font-face {
+  	font-family: 'Inter';
+  	font-style:  normal;
+  	font-weight: 900;
+    font-display: swap;
+  	src: url(Inter-Medium.woff2) format("woff2"),
+  	     url(Inter-Medium.woff) format("woff");;
+  }
