--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -33,5 +33,5 @@
   	font-weight: 900;
     font-display: swap;
   	src: url(Inter-Medium.woff2) format("woff2"),
-  	     url(Inter-Medium.woff) format("woff");;
+  	     url(Inter-Medium.woff) format("woff");
   }
