--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -2,7 +2,9 @@
     max-width:1280px;
     margin: auto;
     width: 68.75%;
-    padding-bottom: 36.25px;
+    padding-bottom:41px;
+    opacity: 0.7;
+    border-bottom: 1px solid #545454;
 }
 
 @media screen and (max-width: 320px){
