--- a/pages/index.css
+++ b/pages/index.css
@@ -1,32 +1,30 @@
 @import url(../vendor/normalize.css);
 @import url(../fonts/fonts.css);
-@import url(../block/root/page.css);
-@import url(../block/header/header.css);
-@import url(../block/header/__logo/header__logo.css);
-@import url(../block/header/__line/header__line.css);
-@import url(../block/portfile/portfile.css);
-@import url(../block/portfile/__avatar/portfile__avatar.css);
-@import url(../block/portfile/__info/portfile__info.css);
-@import url(../block/portfile/__title/portfile__title.css);
-@import url(../block/portfile/__subtitle/portfile__subtitle.css);
-@import url(../block/portfile/__button/portfile__button.css);
-@import url(../block/portfile/__button-big/portfile__button-big.css);
-@import url(../block/elements/elements.css);
-@import url(../block/element/element.css);
-@import url(../block/element/__img/element__img.css);
-@import url(../block/element/__group/element__group.css);
-@import url(../block/element/__text/element__text.css);
-@import url(../block/element/__button/element__button.css);
-@import url(../block/footer/footer.css);
-@import url(../block/footer/__copyright/footer__copyright.css);
-@import url(../block/popup/popup.css);
-@import url(../block/popup/__opened/popup__opened.css);
-@import url(../block/popup/__close-icon/popup__close-icon.css);
-@import url(../block/popup/__main-container/popup__main-container.css);
-@import url(../block/popup/__container/popup__container.css);
-@import url(../block/popup/__heading/popup__heading.css);
-@import url(../block/popup/__input-container/popup__input-container.css);
-@import url(../block/popup/__item/popup__item.css);
-@import url(../block/popup/__input-container_ctrl_texts/popup__input-container_ctrl_texts.css);
-@import url(../block/popup/__handlers/popup__handlers.css);
-@import url(../block/popup/__button/popup__button.css);
+@import url(../blocks/page/page.css);
+@import url(../blocks/header/header.css);
+@import url(../blocks/header/__logo/header__logo.css);
+@import url(../blocks/header/__line/header__line.css);
+@import url(../blocks/portfile/portfile.css);
+@import url(../blocks/portfile/__avatar/portfile__avatar.css);
+@import url(../blocks/portfile/__info/portfile__info.css);
+@import url(../blocks/portfile/__title/portfile__title.css);
+@import url(../blocks/portfile/__subtitle/portfile__subtitle.css);
+@import url(../blocks/portfile/__button/portfile__button.css);
+@import url(../blocks/portfile/__button/__image/portfile__button_image.css);
+@import url(../blocks/portfile/__button-big/portfile__button-big.css);
+@import url(../blocks/elements/elements.css);
+@import url(../blocks/element/element.css);
+@import url(../blocks/element/__img/element__img.css);
+@import url(../blocks/element/__group/element__group.css);
+@import url(../blocks/element/__text/element__text.css);
+@import url(../blocks/element/__button/element__button.css);
+@import url(../blocks/footer/footer.css);
+@import url(../blocks/footer/__copyright/footer__copyright.css);
+@import url(../blocks/popup/popup.css);
+@import url(../blocks/popup/__opened/popup__opened.css);
+@import url(../blocks/popup/__close-icon/popup__close-icon.css);
+@import url(../blocks/popup/__main-container/popup__main-container.css);
+@import url(../blocks/popup/__container/popup__container.css);
+@import url(../blocks/popup/__heading/popup__heading.css);
+@import url(../blocks/popup/__item/popup__item.css);
+@import url(../blocks/popup/__button/popup__button.css);
