fix:popup blocks fixed

--- a/blocks/popup/__button/popup__button.css
+++ b/blocks/popup/__button/popup__button.css
@@ -11,9 +11,8 @@
     margin-bottom: 37px;
     width: 358px;
     margin: auto;
-
-
-    
+    margin-top:48px;
+    margin-bottom: 37px; 
 }
 .popup__button:hover{
     opacity: 0.8;
