--- a/blocks/popup/__item/popup__item.css
+++ b/blocks/popup/__item/popup__item.css
@@ -3,7 +3,7 @@
     border:0;
     border-bottom-width: 1px;
     border-bottom-style: solid;
-    border-bottom-color: black;
+    border-bottom-color:  rgba(0, 0, 0, 0.2);
     font-family: Inter;
     font-style: normal;
     font-weight: normal;
