--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -8,15 +8,7 @@
     left:0px;
     width:100vw;
     height:100vh;
+    background: rgba(0, 0, 0, 0.5)
+
 }
 
-.popup::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    background: black;
-    opacity: 0.5;
- }
