--- a/blocks/portfile/__button/__image/portfile__button_image.css
+++ b/blocks/portfile/__button/__image/portfile__button_image.css
@@ -3,4 +3,14 @@
     width: 10px;
     height: 10px;
     background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    margin: auto;
+
+}
+@media screen and (max-width: 320px){
+.portfile__button_image{
+  width: 7.5px;
+  height: 7.5px;
+}
 }
