--- a/blocks/portfile/__button/portfile__button.css
+++ b/blocks/portfile/__button/portfile__button.css
@@ -11,3 +11,9 @@
     opacity: 0.6;
     cursor: pointer;
 }
+@media screen and (max-width:320px){
+    .portfile__button{
+        width: 18px;
+        height: 18px;
+    }  
+}
