--- a/blocks/portfile/__subtitle/portfile__subtitle.css
+++ b/blocks/portfile/__subtitle/portfile__subtitle.css
@@ -1,4 +1,7 @@
 .portfile__subtitle{
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
     margin: 0;
     font-family: Inter;
     font-style: normal;
