--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -3,11 +3,8 @@
 }
 
 @media screen and (max-width: 320px){
-    .header{
-      width: 100%;
-      padding-bottom: 38.25px;
-    }
     .header__logo{
+      width: 103.74px;
       margin-left: 27px;
       margin-top:28px;
     }
