fix:bem vadulation

--- a/blocks/portfile/__image/portfile__image-button.css
+++ b/blocks/portfile/__image/portfile__image-button.css
@@ -1,5 +1,5 @@
 @media screen and (max-width:320px){
-    .portfile__button-big_image{
+    .portfile__image-button{
         width: 16px;
         height: 16px;
     }  
