--- a/blocks/element/__button/element__button.css
+++ b/blocks/element/__button/element__button.css
@@ -1,9 +1,21 @@
 .element__button{
     border: 0px;
     background-color: white;
+    background-image: url(../../../../images/element__button.svg);
+    background-repeat: no-repeat;
+    width: 21px;
+    height: 19px;
+    background-position: center;
+    align-self: center;
 }
-.element__button:active, .element__button:focus { outline: none; }
-
+.element__button:active, .element__button:focus {
+     outline: none; 
+     background-image: url(../../../../images/black-love.svg);
+     background-repeat: no-repeat;
+     width: 21px;
+     height: 19px;
+     background-position: center;
+    }
 
 .element__button:hover{
     opacity: 0.8;
