--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -3,8 +3,7 @@
     margin: auto;
     width: 68.75%;
     padding-bottom:41px;
-    opacity: 0.7;
-    border-bottom: 1px solid #545454;
+    border-bottom: 1px solid  rgba(84, 84, 84, 0.5);;
 }
 
 @media screen and (max-width: 320px){
