--- a/blocks/portfile/__image/portfile__image.css
+++ b/blocks/portfile/__image/portfile__image.css
@@ -1,16 +1,6 @@
   .portfile__image{
-    background-image: url(../../../images/vector_button-mini.svg);
-    width: 10px;
-    height: 10px;
+    background-image: url(../../../../images/vector_button-mini.svg);
     background-repeat: no-repeat;
     background-position: center;
-    background-size: cover;
     margin: auto;
-
-}
-@media screen and (max-width: 320px){
-.portfile__image{
-  width: 7.5px;
-  height: 7.5px;
-}
 }
