--- a/blocks/element/__text/element__text.css
+++ b/blocks/element/__text/element__text.css
@@ -1,6 +1,6 @@
 .element__text{
     margin: 0;
-    font-family: Inter;
+    font-family: 'Inter', ‘Arial’, sans-serif;
     font-style: normal;
     font-weight: 900;
     font-size: 24px;
