--- a/blocks/popup/__item/popup__item.css
+++ b/blocks/popup/__item/popup__item.css
@@ -4,7 +4,7 @@
     border-bottom-width: 1px;
     border-bottom-style: solid;
     border-bottom-color:  rgba(0, 0, 0, 0.2);
-    font-family: Inter;
+    font-family: 'Inter', ‘Arial’, sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 14px;
