--- a/blocks/portfile/__subtitle/portfile__subtitle.css
+++ b/blocks/portfile/__subtitle/portfile__subtitle.css
@@ -3,7 +3,7 @@
     white-space: nowrap;
     overflow: hidden;
     margin: 0;
-    font-family: Inter;
+    font-family: 'Inter', ‘Arial’, sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 18px;
