--- a/blocks/portfile/__title/portfile__title.css
+++ b/blocks/portfile/__title/portfile__title.css
@@ -5,7 +5,7 @@
     margin: 0;
     align-self: center;
     width: 294px;
-    font-family: Inter;
+    font-family: 'Inter', ‘Arial’, sans-serif;
     font-style: normal;
     font-weight: 500;
     font-size: 42px;
