fix:images new problem

--- a/blocks/element/__button/element__button.css
+++ b/blocks/element/__button/element__button.css
@@ -1,7 +1,7 @@
 .element__button{
     border: 0px;
     background-color: white;
-    background-image: url(../../../../images/element__button.svg);
+    background-image: url(../../../images/element__button.svg);
     background-repeat: no-repeat;
     width: 21px;
     height: 19px;
@@ -10,7 +10,7 @@
 }
 .element__button:active, .element__button:focus {
      outline: none; 
-     background-image: url(../../../../images/black-love.svg);
+     background-image: url(../../../images/black-love.svg);
      background-repeat: no-repeat;
      width: 21px;
      height: 19px;
