fix:fixing fonts

--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -1,4 +1,13 @@
-  @font-face {
+@font-face{
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url(Inter-Regular.woff2) format("woff2"),
+       url(Inter-Regular.woff2) format("woff");
+}
+
+ @font-face {
   	font-family: 'Inter';
   	font-style:  normal;
   	font-weight: 500;
