feat: add popuoTwo

--- a/blocks/element/__button/element__button.css
+++ b/blocks/element/__button/element__button.css
@@ -1,4 +1,5 @@
 .element__button{
+    outline: none;
     border: 0px;
     background-color: white;
     background-image: url(../../../images/element__button.svg);
