--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -1,5 +1,6 @@
 .element{
     display:flex;
+    position: relative;
     flex-direction: column;
     background-color: white;
     border-radius: 10px;
