--- a/blocks/element/__text/element__text.css
+++ b/blocks/element/__text/element__text.css
@@ -5,6 +5,7 @@
     font-weight: 900;
     font-size: 24px;
     line-height: 29px;
+    max-width: 246px;
     color: black;
     text-overflow: ellipsis;
     white-space: nowrap;
