--- a/pages/index.css
+++ b/pages/index.css
@@ -31,5 +31,9 @@
 @import url(../blocks/popup/__heading/popup__heading.css);
 @import url(../blocks/popup/__item/popup__item.css);
 @import url(../blocks/popup/__button/popup__button.css);
-
-
+@import url(../blocks/image/image.css);
+@import url(../blocks/image/__container/image__container.css);
+@import url(../blocks/image/__opened/image__opened.css);
+@import url(../blocks/image/__text/image__text.css);
+@import url(../blocks/image/__close/image__close.css);
+@import url(../blocks/image/__close-width/image__close-width.css);
