--- a/blocks/element/__button/element__button.css
+++ b/blocks/element/__button/element__button.css
@@ -8,15 +8,9 @@
     height: 19px;
     background-position: center;
     align-self: center;
+    position: relative;
+    
 }
-.element__button:active, .element__button:focus {
-     outline: none;
-     background-image: url(../../../images/black-love.svg);
-     background-repeat: no-repeat;
-     width: 21px;
-     height: 19px;
-     background-position: center;
-    }
 
 .element__button:hover{
     opacity: 0.8;
