--- a/blocks/image/__container/image__container.css
+++ b/blocks/image/__container/image__container.css
@@ -5,8 +5,8 @@
     justify-content: center;
     margin: 0 auto;
     max-width: 816px;
-    width: 100%;
-    height: 100%;
+    width: 75vw;
+    height: 75vh;
 }
 
 @media screen and (max-width: 920px){
