--- a/blocks/image/image.css
+++ b/blocks/image/image.css
@@ -1,5 +1,5 @@
 .image{
-    display: none;
+    display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -9,4 +9,7 @@
     width: 100vw;
     height: 100vh;
     background: rgba(0, 0, 0, 0.9);
+    visibility: hidden;
+    opacity: 0;
+    transition: visibility .5s, opacity .5s;
 }
