--- a/pages/index.css
+++ b/pages/index.css
@@ -24,6 +24,11 @@
 @import url(../blocks/footer/__copyright/footer__copyright.css);
 @import url(../blocks/popup-add/popup-add.css);
 @import url(../blocks/popup-add/__container/popup-add__container.css);
+@import url(../blocks/popup-add/__close-cion/popup-add__close-icon.css);
+@import url(../blocks/popup-add/__main-container/popup-add__main-container.css);
+@import url(../blocks/popup-add/__heading/popup-add__heading.css);
+@import url(../blocks/popup-add/__item/popup-add__item.css);
+@import url(../blocks/popup-add/__button/popup-add__button.css);
 @import url(../blocks/popup/popup.css);
 @import url(../blocks/popup/__close-icon/popup__close-icon.css);
 @import url(../blocks/popup/__main-container/popup__main-container.css);
