--- a/blocks/profile/__button-big/profile__button-big.css
+++ b/blocks/profile/__button-big/profile__button-big.css
@@ -1,4 +1,4 @@
-.portfile__button-big{
+.profile__button-big{
     justify-self: end;
     align-self: center;
     border: 2px solid #FFFFFF;
@@ -8,19 +8,19 @@
     width: 150px;
     height: 50px;
 }
-.portfile__button-big:hover{
+.profile__button-big:hover{
     opacity: 0.6;
     cursor: pointer;
 }
 
 @media screen and (max-width: 980px){
-    .portfile__button-big{
+    .profile__button-big{
         width: 100px;
   }
 }
 
 @media screen and (max-width: 760px){
-   .portfile__button-big{
+   .profile__button-big{
     justify-self: center;
     width: 100%;
     max-width: 500px;
@@ -29,7 +29,7 @@
 }
 
 @media screen and (max-width: 590px){
-    .portfile__button-big{
+    .profile__button-big{
         justify-self: center;
         max-width: 400px;
         grid-column: 1/4;
@@ -37,7 +37,7 @@
 }
 
 @media screen and (max-width: 320px){
-    .portfile__button-big{
+    .profile__button-big{
         margin-top:14px;
         width: 88.13%;
     }
