--- a/blocks/profile/__image-button/profile__image-button.css
+++ b/blocks/profile/__image-button/profile__image-button.css
@@ -1,5 +1,5 @@
 @media screen and (max-width:320px){
-    .portfile__image-button{
+    .profile__image-button{
         width: 16px;
         height: 16px;
     }  
