--- a/pages/index.css
+++ b/pages/index.css
@@ -3,15 +3,15 @@
 @import url(../blocks/page/page.css);
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__logo/header__logo.css);
-@import url(../blocks/portfile/portfile.css);
-@import url(../blocks/portfile/__avatar/portfile__avatar.css);
-@import url(../blocks/portfile/__info/portfile__info.css);
-@import url(../blocks/portfile/__title/portfile__title.css);
-@import url(../blocks/portfile/__subtitle/portfile__subtitle.css);
-@import url(../blocks/portfile/__button/portfile__button.css);
-@import url(../blocks/portfile/__image/portfile__image.css);
-@import url(../blocks/portfile/__button-big/portfile__button-big.css);
-@import url(../blocks/portfile/__image-button/portfile__image-button.css);
+@import url(../blocks/profile/profile.css);
+@import url(../blocks/profile/__avatar/profile__avatar.css);
+@import url(../blocks/profile/__info/profile__info.css);
+@import url(../blocks/profile/__title/profile__title.css);
+@import url(../blocks/profile/__subtitle/profile__subtitle.css);
+@import url(../blocks/profile/__button/profile__button.css);
+@import url(../blocks/profile/__image/profile__image.css);
+@import url(../blocks/profile/__button-big/profile__button-big.css);
+@import url(../blocks/profile/__image-button/profile__image-button.css);
 @import url(../blocks/elements/elements.css);
 @import url(../blocks/element/element.css);
 @import url(../blocks/element/__trash/element__trash.css);
