--- a/blocks/profile/__avatar/profile__avatar.css
+++ b/blocks/profile/__avatar/profile__avatar.css
@@ -1,16 +1,16 @@
-.portfile__avatar{
+.profile__avatar{
     width: 120px;
     height: 120px;
     border-radius: 50%;
 }
 @media screen and (max-width: 590px){
-    .portfile__avatar{
+    .profile__avatar{
         grid-column: 1/4;
     }
 }
 
 @media screen and (max-width: 320px){
-    .portfile__avatar{
+    .profile__avatar{
         justify-self: center;
     }
 }
