--- a/blocks/profile/__image/profile__image.css
+++ b/blocks/profile/__image/profile__image.css
@@ -1,4 +1,4 @@
-  .portfile__image{
+  .profile__image{
     background-image: url(../../../images/vector_button-mini.svg);
     background-repeat: no-repeat;
     background-position: center;
