--- a/src/blocks/element/__button/element__button.css
+++ b/src/blocks/element/__button/element__button.css
@@ -1,4 +1,5 @@
 .element__button{
+    grid-area: button;
     outline: none;
     border: 0px;
     background-color: white;
@@ -6,6 +7,7 @@
     background-repeat: no-repeat;
     width: 21px;
     height: 19px;
+    margin-top: 25px;
     background-position: center;
     align-self: center;
     position: relative;
