--- a/src/blocks/element/__group/element__group.css
+++ b/src/blocks/element/__group/element__group.css
@@ -1,5 +1,9 @@
 .element__group{
-    display: flex;
+    display: grid;
+    grid-template-areas:
+        "text button"
+        "text like";
     justify-content: space-between;
-    margin: 25px 15px 31px 21px;
+    margin-right: 15px;
+    margin-left: 21px;
 }
