--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,10 @@
-@import url(./vendor/normalize.css);
+@import url(./venodor/normalize.css);
 @import url(./fonts/fonts.css);
 @import url(./blocks/page/page.css);
 @import url(./blocks/header/header.css);
 @import url(./blocks/header/__logo/header__logo.css);
 @import url(./blocks/profile/profile.css);
+@import url(./blocks/profile/__edit/pfrofile__edit.css);
 @import url(./blocks/profile/__avatar/profile__avatar.css);
 @import url(./blocks/profile/__info/profile__info.css);
 @import url(./blocks/profile/__title/profile__title.css);
@@ -15,21 +16,26 @@
 @import url(./blocks/elements/elements.css);
 @import url(./blocks/element/element.css);
 @import url(./blocks/element/__trash/element__trash.css);
+@import url(./blocks/element/__trash/_hiden/element__trash_hiden.css);
 @import url(./blocks/element/__img/element__img.css);
 @import url(./blocks/element/__group/element__group.css);
 @import url(./blocks/element/__text/element__text.css);
 @import url(./blocks/element/__button/element__button.css);
 @import url(./blocks/element/__button/_add_black-icon/element__button_add_black-icon.css);
+@import url(./blocks/element/__like-info/element__like-info.css);
 @import url(./blocks/footer/footer.css);
 @import url(./blocks/footer/__copyright/footer__copyright.css);
 @import url(./blocks/popup/popup.css);
 @import url(./blocks/popup/__close-icon/popup__close-icon.css);
+@import url(./blocks/popup/__close-icon/_up/popup__close-icon_up.css);
 @import url(./blocks/popup/__main-container/popup__main-container.css);
 @import url(./blocks/popup/__container/popup__container.css);
+@import url(./blocks/popup/__container/_rounding/popup__container_rounding.css);
 @import url(./blocks/popup/__heading/popup__heading.css);
 @import url(./blocks/popup/__item/popup__item.css);
 @import url(./blocks/popup/__item/_type_error/popup__item_type_error.css);
 @import url(./blocks/popup/__button/popup__button.css);
+@import url(./blocks/popup/__button-avatar/popup__button-avatar.css);
 @import url(./blocks/popup/__button/_invalid/popup__button_invalid.css);
 @import url(./blocks/popup/__image-container/popup__image-container.css);
 @import url(./blocks/popup/__image-close/popup__image-close.css);
@@ -37,4 +43,5 @@
 @import url(./blocks/popup/__image-opened/popup__image-opened.css);
 @import url(./blocks/popup/__image-text/popup__image-text.css);
 @import url(./blocks/popup/_opened/popup_opened.css);
+@import url(./blocks/popup/__text/popup__text.css);
 @import url(./blocks/error/error.css);
